LightBDD
===========================================

Version 2.3.3
----------------------------------------
Summary:
+ #90 Allowed to install new FeatureCoordinator when previous one is disposed in order to allow NCrunch reusing the same process to run LightBDD multiple times
+ #92 Excluded this argument from step name display when extension method is used
Details:
+ #90 (Core)(Change) Allowed to install new FeatureCoordinator when previous one is disposed in order to allow NCrunch reusing the same process to run LightBDD multiple times
+ #92 (Core)(Change) Excluded this argument from step name display when extension method is used
+ #92 (Core)(Change) Corrected parameter placement in name when having appended parameter of lower index than matching in-text replacement at the end of the name, like: void Step_with_param(string other, string param)

Version 2.3.2
----------------------------------------
Summary:
+ #80 Updated LightBDD.MsTest2 to use MsTest.TestFramework 1.2.0
+ #87 Fixed directory separator for Unix systems
Details:
+ #87 (Framework)(Fix) Use the System.IO.Path.DirectorySeparatorChar in file paths to match Unix and Win paths
+ #80 (MsTest2)(Change) Updated LightBDD.MsTest2 to use MsTest.TestFramework 1.2.0: that version is not binary compatible with 1.1.18 so it was not possible to use LightBDD.MsTest2 with newest MsTest

Version 2.3.1
----------------------------------------
Summary:
+ #73 Fixed "Tests accessing Application Settings fails on NET45x with SerializationException: TestContextProvider is not marked as serializable"
Details:
+ #73 (Framework)(Fix) Corrected AsyncLocalContext<T> in LightBDD targeting NET45x to marshal stored context by ref when transferring it between domains

Version 2.3.0
----------------------------------------
Summary:
+ #20 Reworked parameter formatting and added default formatters for scenario/step parameters as well as facility to register own assembly-wide formatters