@@ -4,12 +4,18 @@ LightBDD
 Version 2.3.3
 ----------------------------------------
 Summary:
++ #69 Simplified exception stack trace for scenario/step exceptions in reports and underlying test frameworks
 + #90 Allowed to install new FeatureCoordinator when previous one is disposed in order to allow NCrunch reusing the same process to run LightBDD multiple times
 + #92 Excluded this argument from step name display when extension method is used
 Details:
 + #90 (Core)(Change) Allowed to install new FeatureCoordinator when previous one is disposed in order to allow NCrunch reusing the same process to run LightBDD multiple times
 + #92 (Core)(Change) Excluded this argument from step name display when extension method is used
 + #92 (Core)(Change) Corrected parameter placement in name when having appended parameter of lower index than matching in-text replacement at the end of the name, like: void Step_with_param(string other, string param)
++ #69 (Core)(Change) Exposed DefaultExceptionFormatter with ability to filter stack trace members and limit number of printed stack trace lines. Excluded async exception rethrow frames by default (reports and progress notifers)
++ #69 (Core)(New) Introduced ScenarioExecutionException to be used to propagate scenario/step exceptions without recording LightBDD internal frames
++ #69 (Framework)(Change) Simplified exception stack trace for basic/extended/fluent step syntax and sync/async runners
++ #69 (all integrations)(Change) Configured DefaultExceptionFormatter to exclude underlying test framework assertion frames from reports and progress notifiers
++ #69 (Core)(Change) Changed minimal required .NET Standard version from 1.1 to 1.3
 
 Version 2.3.2
 ----------------------------------------
